--- a/RailSimClient/pom.xml
+++ b/RailSimClient/pom.xml
@@ -9,6 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <dependencies>
+        <dependency>
+            <groupId>uk.co.raphel</groupId>
+            <artifactId>railsimcommon</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <artifactId>RailSimClient</artifactId>
 
 </project>
