--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>RailSimClient</module>
         <module>RailSimCommon</module>
         <module>RailsimConfigGUI</module>
+        <module>server</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -93,11 +94,12 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
-        <dependency>
+ <!--       <dependency>
             <groupId>uk.co.raphel</groupId>
             <artifactId>railsimcommon</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-    </dependencies>
+ -->   </dependencies>
+
 
 </project>
