--- a/RailSimClient/pom.xml
+++ b/RailSimClient/pom.xml
@@ -15,6 +15,14 @@
             <artifactId>railsimcommon</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+       </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
     <artifactId>RailSimClient</artifactId>
 
